# swapi-crawler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: cli.py  config.py  db.py  main.py
app/api/: dependencies.py
app/api/routers/: films.py  people.py  planets.py  species.py  starships.py  vehicles.py
app/api/schemas/: person.py
app/clients/: public_api_client.py
app/models/: __init__.py  film.py  links.py  mixins.py  person.py  planet.py  species.py  starship.py  vehicle.py
app/repositories/: base_repository.py  film_planet_repository.py  film_repository.py  film_species_repository.py  film_starship_repository.py  film_vehicle_repository.py  link_repository.py  person_film_repository.py  person_repository.py  person_species_repository.py  person_starship_repository.py  person_vehicle_repository.py  planet_repository.py  species_repository.py  starship_repository.py  vehicle_repository.py
app/services/: crawler_service.py  entity_service.py  person_service.py
tests/: conftest.py  test_crawler_service.py  test_entity_repository.py  test_person_service.py
