[project]
name = "swapi-crawler"
version = "0.1.0"
description = "Crawler that ingests the Star Wars API (SWAPI) into PostgreSQL and exposes it via a Typer CLI and a FastAPI REST API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "sqlmodel>=0.0.38",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.3.4",
    "httpx>=0.28.1",
    "typer>=0.13.1",
    "environs>=11.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]
